--- a/Screens/example.ui
+++ b/Screens/example.ui
@@ -52,6 +52,18 @@
     <property name="text">
      <string>State</string>
     </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
+    <property name="autoDefault">
+     <bool>false</bool>
+    </property>
+    <property name="default">
+     <bool>false</bool>
+    </property>
+    <property name="flat">
+     <bool>false</bool>
+    </property>
    </widget>
    <widget class="QLabel" name="stateOutputLabel">
     <property name="geometry">
